[SYMFONY] add excersice

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -3,6 +3,6 @@
 {% block body %}
     <h1>Welcome to the excersise for XM</h1>
     <ul>
-        <li><a href="/graph">Search for Tag</a></li>
+        <li><a href="/search">Search for Tag</a></li>
     </ul>
 {% endblock %}
